optimize: replace og_preview.jpg with WebP version

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     />
     <meta
       property="og:image"
-      content="https://sarshijkarn.com.np/assets/og_preview.jpg"
+      content="https://sarshijkarn.com.np/assets/og_preview.webp"
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://sarshijkarn.com.np/" />
@@ -57,7 +57,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://sarshijkarn.com.np/assets/og_preview.jpg"
+      content="https://sarshijkarn.com.np/assets/og_preview.webp"
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
@@ -154,7 +154,7 @@
       playsinline
       id="bg-video"
       preload="none"
-      poster="assets/og_preview.jpg"
+      poster="assets/og_preview.webp"
     >
       <source src="assets/galaxy.mp4" type="video/mp4" /></video
     ><button
