fix: remove duplicate desktopp.png (1.2MB), use optimized og_preview.webp for all preview images

--- a/index.html
+++ b/index.html
@@ -139,6 +139,31 @@
       async
       defer
     ></script>
+    <!-- DNS Prefetch for Performance -->
+    <link rel="dns-prefetch" href="https://challenges.cloudflare.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://challenges.cloudflare.com" crossorigin>
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Sarshij Karn",
+      "jobTitle": "Electronics Engineer & Full-Stack Developer",
+      "url": "https://sarshijkarn.com.np",
+      "sameAs": [
+        "https://github.com/SarshijKarn",
+        "https://www.linkedin.com/in/sarshij-karn-1a7766236/",
+        "https://twitter.com/sarshijkarn"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Kathmandu",
+        "addressCountry": "NP"
+      }
+    }
+    </script>
   </head>
   <body class="dark">
     <div id="preloader">
