feat: production optimizations - security hardening, performance boost, SEO improvements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Sarshij Karn | Electronics Engineer · AI · Cybersecurity</title>
+    <link rel="preload" href="style.css?v=5.0" as="style">
+    <link rel="preload" href="assets/img/fullME-optimized.webp" as="image">
     <link rel="canonical" href="https://sarshijkarn.com.np/" />
     <meta
       name="description"
