Homepage Img Fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Expires" content="0" />
     <title>Sarshij Karn | Electronics Engineer · AI · Cybersecurity</title>
     <link rel="preload" href="style.css?v=5.0" as="style">
-    <link rel="preload" href="assets/img/fullME-optimized.webp" as="image">
+    <link rel="preload" href="assets/img/HomepageFix.webp" as="image">
     <link rel="canonical" href="https://sarshijkarn.com.np/" />
     <meta
       name="description"
@@ -386,7 +386,7 @@
         <div class="hero-image-right pointer-events-none select-none">
           <div class="hero-img-overlay"></div>
           <img
-            src="assets/img/fullME-optimized.webp"
+            src="assets/img/HomepageFix.webp"
             alt="Sarshij Karn"
             class="full-body-img"
             fetchpriority="high"
