Bg vid and preloader removed,

--- a/index.html
+++ b/index.html
@@ -43,24 +43,7 @@
       property="og:description"
       content="Electronics engineering student from Nepal focused on AI, cybersecurity, and modern technology systems."
     />
-    <meta
-      property="og:image"
-      content="https://sarshijkarn.com.np/assets/og_preview.webp"
-    />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://sarshijkarn.com.np/" />
-    <meta
-      property="twitter:title"
-      content="Sarshij Karn | Electronics Engineer · AI · Cybersecurity"
-    />
-    <meta
-      property="twitter:description"
-      content="Electronics engineering student from Nepal specializing in AI, cybersecurity, and emerging technologies."
-    />
-    <meta
-      property="twitter:image"
-      content="https://sarshijkarn.com.np/assets/og_preview.webp"
-    />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="icon"
@@ -168,23 +151,8 @@
     </script>
   </head>
   <body class="dark">
-    <div id="preloader">
-      <div class="preloader-content">
-        <div class="loader-scanline"></div>
-        <p class="preloader-text">Initializing Neural Link...</p>
-      </div>
-    </div>
-    <video
-      autoplay
-      loop
-      muted
-      playsinline
-      id="bg-video"
-      preload="none"
-      poster="assets/og_preview.webp"
-    >
-      <source src="assets/galaxy.mp4" type="video/mp4" /></video
-    ><button
+
+<button
       id="mobileMenuBtn"
       class="hamburger-btn"
       aria-label="Toggle Sidebar"
