--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Sarshij Karn | Electronics Engineer · AI · Cybersecurity</title>
-    <link rel="preload" href="style.css?v=9.0" as="style">
+    <link rel="preload" href="style.css?v=10.0" as="style">
     <link rel="preload" href="assets/img/HomepageFix.webp" as="image">
     <link rel="canonical" href="https://sarshijkarn.com.np/" />
     <meta
@@ -117,8 +117,8 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Fira+Code:wght@300;400;500&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css?v=9.0" />
-    <link rel="stylesheet" href="project-icons.css?v=9.0" />
+    <link rel="stylesheet" href="style.css?v=10.0" />
+    <link rel="stylesheet" href="project-icons.css?v=10.0" />
     <script
       src="https://challenges.cloudflare.com/turnstile/v0/api.js"
       async
@@ -1307,6 +1307,27 @@
     <button id="backToTop" class="back-to-top" aria-label="Back to top">
       <i class="fas fa-arrow-up"></i>
     </button>
-    <script src="script.js?v=9.0" defer></script>
+    <script src="script.js?v=10.0" defer></script>
+
+    <!-- 🛡️ Failsafe: Ensure site is never stuck on a black screen if JS fails -->
+    <script>
+      setTimeout(() => {
+        const hiddenElements = document.querySelectorAll('.hero-content-left, .hero-image-right, .hero-title, .typing-text, .social-icon');
+
+        // 1. Force Body Visibility (in case GSAP 'from' tween stuck)
+        if (document.body.style.opacity === '0') {
+            document.body.style.opacity = '1';
+        }
+
+        // 2. Force Hero Elements Visibility
+        hiddenElements.forEach(el => {
+          if (getComputedStyle(el).opacity === '0') {
+            el.style.opacity = '1';
+            el.style.visibility = 'visible';
+            console.warn('⚠️ Failsafe triggered: Forced content visibility.');
+          }
+        });
+      }, 4000); // 4 seconds safety timeout
+    </script>
   </body>
 </html>
