Feat: Add cyberpunk goth companion character with interactions

--- a/index.html
+++ b/index.html
@@ -1307,6 +1307,13 @@
     <button id="backToTop" class="back-to-top" aria-label="Back to top">
       <i class="fas fa-arrow-up"></i>
     </button>
+
+    <!-- 🎮 Corner Companion Character -->
+    <div class="companion-container" id="companion">
+      <img src="assets/img/Model/goth-companion2.png" alt="Companion" class="companion-img">
+      <div class="companion-bubble" id="companionBubble"></div>
+    </div>
+
     <script src="script.js?v=b394c99" defer></script>
 
     <!-- 🛡️ Failsafe: Ensure site is never stuck on a black screen if JS fails -->
