--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,12 @@
     <!-- 🎮 Corner Companion Character -->
     <div class="companion-container" id="companion">
       <img src="assets/img/Model/goth-companion2.png" alt="Companion" class="companion-img">
-      <div class="companion-bubble" id="companionBubble"></div>
+      <div class="companion-bubble" id="companionBubble">
+        <div class="voice-toggle" id="voiceToggle" title="Toggle Voice">
+          <i class="fas fa-volume-mute"></i>
+        </div>
+        <span id="bubbleText"></span>
+      </div>
     </div>
 
     <script src="script.js?v=b394c99" defer></script>
